# supermarket-tracker

./: .gitignore  2026-04-06-supermarket-tracker-design.md  CLAUDE.md  Dockerfile  README.md  db.py  main.py  nixpacks.toml  pricing.py  products.json  pyproject.toml  scheduler.py  seed.py
.claude/: alfred-evidence.json
bot/: telegram.py
dashboard/: app.py
dashboard/templates/: detail.html  index.html
docs/: explicacion-tecnica.md
docs/plans/: 2026-04-06-supermarket-tracker.md
pytest-of-guiomar.romero/: pytest-current
pytest-of-guiomar.romero/pytest-0/: test_price_historycurrent  test_save_and_retrieve_pricecurrent
pytest-of-guiomar.romero/pytest-1/: test_price_historycurrent  test_save_and_retrieve_pricecurrent
pytest-of-guiomar.romero/pytest-2/: test_price_historycurrent  test_save_and_retrieve_pricecurrent
scrapers/: base.py  carrefour.py  el_corte_ingles.py  el_jamon.py  lidl.py  mercadona.py  router.py
supermarket_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_db.py  test_pricing.py  test_scrapers.py
