[project]
name = "supermarket-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
